TLRC - 828 - Create Registrations Dashboard Page - Fixed dashboard layout issue

--- a/src/Sfa.Tl.ResultsAndCertification.Web/Frontend/src/stylesheets/sass/components/_dashboard.scss
+++ b/src/Sfa.Tl.ResultsAndCertification.Web/Frontend/src/stylesheets/sass/components/_dashboard.scss
@@ -13,3 +13,9 @@
     @extend .card;
     margin-bottom: 30px;
 }
+ 
+@media screen and (max-width: 980px) and (min-width: 640px) {
+    .card {
+        min-height: 140px;
+    }
+}
